# marana_console

./: .gitignore  README.md  marana-client.spec  pyproject.toml  run_client.bat  run_client.py
deploy/: marana-server-sim.service  marana-server.service
deploy/sim/: mcs2sim.substitutions  st.cmd.mcs2sim  start-mcs2-sim.sh
docs/superpowers/specs/: 2026-06-15-focus-bidirectional-design.md  2026-06-16-focus-autosave-design.md
marana_client/: __main__.py  client.py  config.py  io_tiff.py  meta.py  worker.py
marana_client/tests/: conftest.py  test_aoi_mapping.py  test_client_reconnect.py  test_contrast.py  test_e2e_sim.py  test_io_tiff.py  test_ui_fixes.py  test_worker_state.py
marana_client/ui/: connection_card.py  focus_panel.py  image_view.py  kinetic_panel.py  kinetic_save_dialog.py  live_panel.py  main_window.py  quick_acquire_dialog.py  side_panels.py  theme.py
marana_proto/: errors.py  messages.py
marana_proto/tests/: test_errors.py  test_messages.py
marana_server/: __main__.py  camera.py  epics_mover.py  io_tiff.py  meta.py  publisher.py  sdnotify.py  service.py  sim_camera.py  watchdog.py  worker.py
marana_server/assets/: sim_sample.tif
marana_server/tests/: test_camera_sim.py  test_diag.py  test_epics_mover.py  test_io_tiff.py  test_sdnotify.py  test_service_inproc.py  test_sim_camera.py  test_watchdog.py  test_worker_state.py
